--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ background-size: cover;
 
  .fourth {
   
-  background-image: url(PC.gif);
+  background-image: url(pc.gif);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
